first commit azd 10

--- a/LAHJA/UI/Components/Plan/TemplatePlan.razor
+++ b/LAHJA/UI/Components/Plan/TemplatePlan.razor
@@ -9,7 +9,7 @@
 @inject ISnackbar Snackbar
 @inject IManageLanguageService _manageLanguageService
 @using LAHJA.Them
-
+ @* @attribute [Allow] *@
 @if (Params != null)
 {
 
