first commit azd 11

--- a/LAHJA/Pages/Home.razor
+++ b/LAHJA/Pages/Home.razor
@@ -16,7 +16,7 @@
 @inject LanguageService languageService
 @inject IManageLanguageService _manageLanguageService
 
-
+@* @attribute [Authorize(Roles = "Admin")] *@
 @attribute [AllowAnonymous]
 
 
