--- a/LAHJA/UI/Components/DialogBox.razor
+++ b/LAHJA/UI/Components/DialogBox.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using LAHJA.Them
+
 
 
     <MudDialog class="d-flex align-center justify-content-center flex-column" style="width:40% !important">
@@ -8,7 +9,7 @@
         </DialogContent>
         <DialogActions >
             <div class="d-flex justify-content-around align-items-center">
-            <MudButton OnClick="onConfirm" Color="Color.Primary">@GetTrans("Ok")</MudButton>
+            <MudButton OnClick="onConfirm" Color="AppColors.BASE_COLOR_ENUM">@GetTrans("OK")</MudButton>
             <MudButton OnClick="onCancel" Color="Color.Secondary">@GetTrans("Cancel")</MudButton>
         </div>
         </DialogActions>
