--- a/LAHJA/UI/Components/ProFile/Settings/AccessTokensTemplate.razor
+++ b/LAHJA/UI/Components/ProFile/Settings/AccessTokensTemplate.razor
@@ -1,41 +1,68 @@
-﻿@using LAHJA.Data.UI.Components
+﻿@using Domain.ShareData
+@using LAHJA.Data.UI.Components
+@using LAHJA.Data.UI.Models
+@using LAHJA.UI.Components.ProFile.USettings
 @using LAHJA.UI.Components.ServiceCard
 @using LAHJA.UI.Components.TabelCard
+@using Microsoft.AspNetCore.Authorization
 @inject IDialogService DialogService
 @inject ISnackbar Snackbar
-@using Microsoft.AspNetCore.Authorization
+@inject NavigationManager Navigation
+@inject MessageBox MessageBox
+@inject IManageLanguageService _manageLanguageService
+
+
 @attribute [Authorize]
 
-<TabelDashCard T="AccessTokenAuth" DataAndEventBuildTabel="dataAndEvent"
+<TabelDashCard T="SessionTokenAuth" DataAndEventBuildTabel="dataAndEvent"
                StateCounts="cardStates"
                ActionTabels="groupAction"
                BarTabel="TranslationsLST" />
 
 @code {
 
-
-    [Parameter] public List<AccessTokenAuth> DataBuild { set => _dataBuild = value; get => _dataBuild; }
-
-    [Parameter] public EventCallback<DataBuildAccessTokenAuth> SubmitCreate { set; get; }
-    [Parameter] public EventCallback<DataBuildAccessTokenAuth> SubmitDelete { set; get; }
-    [Parameter] public EventCallback<DataBuildAccessTokenAuth> SubmitCancel { set; get; }
-    
-
-
-    private List<AccessTokenAuth> _dataBuild = new();
-    private DataAndEventBuildTabelCard<AccessTokenAuth> dataAndEvent = null;
+    private List<SessionTokenAuth> _dataBuild = new();
+    private DataAndEventBuildTabelCard<SessionTokenAuth> dataAndEvent = null;
     private string lg = "ar";
-    protected override void OnInitialized()
+    private IDialogReference  dialog;
+    private List<CardStateCount<string>>? cardStates = null;
+    private GroupActionTabels groupAction = new GroupActionTabels();
+
+    [Parameter] public List<SessionTokenAuth> DataBuild { set
+        {
+
+            if (value != null)
+            {
+                _dataBuild = value;
+                initializeData(_dataBuild);
+            }
+        }
+        get => _dataBuild; }
+
+    [Parameter] public EventCallback<SessionTokenAuth> SubmitCreate { set; get; }
+    [Parameter] public List<DataBuildServiceInfo> Services { set; get; } = new();
+    [Parameter] public EventCallback<string> SubmitValidate { set; get; }
+    [Parameter] public EventCallback<DataBuildServiceInfo> SubmitCreateSessionToken { set; get; }
+    [Parameter] public EventCallback<DataBuildSessionTokenAuth> SubmitDelete { set; get; }
+    [Parameter] public EventCallback<DataBuildSessionTokenAuth> SubmitCancel { set; get; }
+    [Parameter] public EventCallback<DataBuildSessionTokenAuth> SubmitResume { set; get; }
+    [Parameter] public EventCallback<DataBuildSessionTokenAuth> SubmitPause { set; get; }
+    [Parameter] public EventCallback<DataBuildSessionTokenAuth> SubmitActive { set; get; }
+
+
+
+    private void initializeData(List<SessionTokenAuth> _dataBuild)
     {
-
-
 
         dataAndEvent = new()
             {
                 DataBuild = _dataBuild,
-                // LabelColumns = ColomsTrans[lg].ToList(),
+                LabelColumns = ColomnsTrans[lg].Values.ToList(),
 
                 Events = new()
+                {
+                    OnRowClicked = EventCallback.Factory.Create<SessionTokenAuth>(this, OnRowClicked)
+                }
             };
 
         cardStates = new()
@@ -67,22 +94,35 @@
                 ,
                 Name="انشاء"
             },
-            new()
-            {
-                Icon=@Icons.Material.Filled.Delete
-                ,
-                IsMudChip=false,
-                Tag="delete"
-            }
+            // new()
+            // {
+            //     Icon=@Icons.Material.Filled.Delete
+            //     ,
+            //     IsMudChip=false,
+            //     Tag="delete"
+            // }
         };
-        groupAction.ChipClicked += OnChipClicked;
+        groupAction.ChipClicked = OnChipClicked;
+    }
+    protected override async Task OnInitializedAsync()
+    {
+
+        if (_dataBuild==null)
+            initializeData(_dataBuild);
+
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+
+        if (firstRender)
+        {
+            lg = await _manageLanguageService.GetLanguageAsync();
+            StateHasChanged();
+        }
     }
 
 
-  
-    List<CardStateCount<string>>? cardStates = null;
-
-    GroupActionTabels groupAction = new GroupActionTabels();
 
     private Task OnChipClicked(CardActionTabel action)
     {
@@ -105,20 +145,174 @@
 
 
 
-        var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Large, FullWidth = true };
+        var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Small, FullWidth = false };
 
 
-        var parameters = new DialogParameters<DialogContent>
+        var parameters = new DialogParameters<FormSessionToken>
         {
 
-            { x =>x.DataBuild1,null },
+            { x =>x.Services,Services },
+            { x =>x.SubmitSaved,EventCallback.Factory.Create<DataBuildServiceInfo>(this, OnCreateNewSessionToken) },
 
-            {x => x.DataBuildCheck,null},
-            {x=>x.SrcIframe,"https://lahja-core.onrender.com/createspace"}
         };
 
-        DialogService.Show<DialogContent>("", parameters, options);
+        dialog=DialogService.Show<FormSessionToken>("", parameters, options);
     }
+
+    private async Task OnCreateNewSessionToken(DataBuildServiceInfo data)
+    {
+        if (SubmitCreateSessionToken.HasDelegate)
+        {
+            await SubmitCreateSessionToken.InvokeAsync(data);
+        }
+    }
+    private Task OnRowClicked(SessionTokenAuth data)
+    {
+        var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Medium, FullWidth = true };
+
+        var parameters = new DialogParameters<ViewRowDetails<SessionTokenAuth>>
+        {
+            { x =>x.Title,"Session Token" },
+            { x =>x.Lang,lg },
+            { x =>x.DataBuild,data },
+            { x =>x.LabelaTrans,ColomnsTrans[lg]},
+            { x =>x.HasSwitchButton,true},
+            { x =>x.PropertySwitchName,"IsActive"},
+            { x =>x.Events, new EventBuildViewRowDetails<SessionTokenAuth>(){
+                    DeleteClicked=EventCallback.Factory.Create<SessionTokenAuth>(this, OnDeleteClicked),
+                    SwitchedActiveStatus=EventCallback.Factory.Create<SessionTokenAuth>(this, OnSwitchActiveStatus),
+                    ActiveClicked=EventCallback.Factory.Create<SessionTokenAuth>(this, OnActiveClicked),
+                    ValidateClicked=EventCallback.Factory.Create<SessionTokenAuth>(this, OnValidateClicked),
+                }
+            },
+
+        };
+
+        dialog=DialogService.Show<ViewRowDetails<SessionTokenAuth>>("", parameters, options);
+        return Task.CompletedTask;
+
+    }
+
+    private async Task OnSwitchActiveStatus(SessionTokenAuth value)
+    {
+        var title = GetTranslation("title");
+        if (value.IsActive)
+        {
+            if (await MessageBox.ShowAsync(title, GetTranslation("ResumeSessionTokenMsg")))
+            {
+
+                if (SubmitResume.HasDelegate)
+                {
+                    await SubmitResume.InvokeAsync(new DataBuildSessionTokenAuth{Id=value.Id});
+                    refreshPage();
+                }
+            }
+        }
+        else
+        {
+            if (await MessageBox.ShowAsync(title, GetTranslation("PauseSessionTokenMsg")))
+            {
+
+                if (SubmitPause.HasDelegate)
+                {
+                    await SubmitPause.InvokeAsync(new DataBuildSessionTokenAuth { Id = value.Id });
+                    refreshPage();
+                }
+            }
+        }
+    } 
+    private async Task OnDeleteClicked(SessionTokenAuth value)
+    {
+        if (await MessageBox.ShowAsync(GetTranslation("title"), GetTranslation("RemoveSessionTokenMsg"),lg))
+        {
+            if (SubmitDelete.HasDelegate)
+            {
+                await SubmitDelete.InvokeAsync(new DataBuildSessionTokenAuth { Id = value.Id });
+                refreshPage();
+
+            }
+        }
+    }
+    private async Task OnActiveClicked(SessionTokenAuth value)
+    {
+        if (await MessageBox.ShowAsync(GetTranslation("title"), GetTranslation("ActiveSessionTokenMsg"), lg))
+        {
+            if (SubmitActive.HasDelegate)
+            {
+                await SubmitActive.InvokeAsync(new DataBuildSessionTokenAuth { Id = value.Id });
+                refreshPage();
+
+            }
+        }
+    }
+
+    private async Task OnValidateClicked(SessionTokenAuth dataBuild)
+    {
+
+        if (SubmitValidate.HasDelegate)
+        {
+            await SubmitValidate.InvokeAsync(dataBuild.SessionToken);
+        }
+
+        dialog?.Close();
+    }
+    private void refreshPage()
+    {
+        Navigation.NavigateTo(Navigation.Uri, true);
+    }
+
+     public string GetTranslation(string Key)
+    {
+        if (TranslationData.ContainsKey(lg) && TranslationData[lg].ContainsKey(Key))
+        {
+            return TranslationData[lg][Key];
+        }
+        return Key;
+    }
+
+
+    private static readonly Dictionary<string, Dictionary<string, string>> ColomnsTrans = new()
+        {
+            ["en"] = new()
+            {
+                 { "Id", "Id" },
+                // { "SpaceId", "SpaceId" },
+                { "Subscription", "Subscription" },
+                { "SessionToken", "SessionToken" },
+                { "ApiEndPoint", "ApiEndPoint" },
+                { "Status", "Status" },
+                { "AuthorizationType", "AuthorizationType" },
+                { "StartTime", "StartTime" },
+                { "EndTime", "EndTime" },
+                { "CreationDate", "CreationDate" },
+                { "IsActive", "IsActive" },
+                { "IpAddress", "IpAddress" },
+                { "DeviceInfo", "DeviceInfo" },
+                { "ServiceId", "ServiceId" },
+                { "ModelGatewayId", "ModelGatewayId" },
+                { "Spaces", "Spaces" }
+            },
+            ["ar"] = new Dictionary<string, string>(){
+
+                { "Id", "المعرّف" },
+                // { "SpaceId", "معرف الـ Space" },
+                { "Subscription", "نوع الاشتراك" },
+                { "SessionToken", "رمز الوصول" },
+                { "ApiEndPoint", "بوابة API" },
+                { "Status", "الحالة" },
+                { "AuthorizationType", "نوع المصادقة" },
+                { "StartTime", "وقت البدء" },
+                { "EndTime", "وقت الانتهاء" },
+                { "CreationDate", "تاريخ الإنشاء" },
+                { "IsActive", "نشط" },
+                { "IpAddress", "عنوان IP" },
+                { "DeviceInfo", "معلومات الجهاز" },
+                { "ServiceId", "معرف الخدمة" },
+                { "ModelGatewayId", "معرف بوابة النموذج" },
+                { "Spaces", "المساحات" }
+            }
+        };
+
 
     private static readonly Dictionary<string, Dictionary<string, string>> TranslationsLST = new()
         {
@@ -138,12 +332,30 @@
             }
         };
 
+    public static readonly Dictionary<string, Dictionary<string, string>> TranslationData =new(){
+            {
+                "en", new Dictionary<string, string>
+                {
+             
+                    { "title", "Subscription Settings" },
+                    { "PauseSessionTokenMsg", "The current SessionToken will be temporarily suspended. Do you agree?" },
+                    { "ResumeSessionTokenMsg", "The current SessionToken will be reactivated. Do you agree?" },
+                    { "RemoveSessionTokenMsg", "The current SessionToken will be deleted. Do you agree? You will not be able to use it again !!" },
+                    
+                }
+            },
+            {
+               "ar", new Dictionary<string, string>
+                {
 
+                    { "title", "اعدادات الاشتراك" },
+                    { "PauseSessionTokenMsg", "سيتم إيقاف رمز الجلسة الحالي مؤقتاً هل انت موافق على ذلك ؟" },
+                    { "ResumeSessionTokenMsg", " سيتم إعادة تفعيل رمز الجلسة الحالي هل انت موافق على ذلك ؟" },
+                    { "RemoveSessionTokenMsg", " سيتم حذف  رمز الجلسة الحالي هل انت موافق على ذلك ؟ لن تتمكن من استخدامه مره اخرى." },
+                  
+                }
+            }
+     };
 
   
-
-
-
-
-
 }
