--- a/LAHJA/UI/Templates/Profile/TemplateAccessToken.razor
+++ b/LAHJA/UI/Templates/Profile/TemplateAccessToken.razor
@@ -1,5 +1,6 @@
 ﻿@* @page "/settings/spaces/{*subscriptionId}" *@
 @using LAHJA.Data.UI.Components
+@using LAHJA.Data.UI.Models
 @using LAHJA.UI.Components.ServiceCard
 @using LAHJA.UI.Components.TabelCard
 @inject IDialogService DialogService
@@ -9,31 +10,46 @@
 @attribute [Authorize]
 
 @inject LAHJA.Data.UI.Templates.Profile.TemplateProfile Template
+@inject LAHJA.Data.UI.Templates.Services.TemplateServices templateService
 
 
 
 
 @if (Template != null )
 {
-    <AccessTokensTemplate DataBuild="dataBuild" />
+    <AccessTokensTemplate DataBuild="dataBuild"
+                          Services="services"
+                          SubmitCreateSessionToken="Template.BuilderComponents.SubmitCreateSessionToken"
+                          SubmitValidate="Template.BuilderComponents.SubmitValidateSessionToken" 
+                          SubmitDelete="Template.BuilderComponents.SubmitDeleteSessionAccessToken" 
+                          SubmitResume="Template.BuilderComponents.SubmitResumeSessionToken" 
+                          SubmitPause="Template.BuilderComponents.SubmitPauseSessionToken" />
 }
 
 
 @code {
 
-
+    private List<DataBuildServiceInfo> services = new();
     private string lg = "ar";
 
     [Parameter] public string subscriptionId{ set; get; }
     [Parameter] public string spaceId{ set; get; }
 
-    private List<AccessTokenAuth> dataBuild = new List<AccessTokenAuth>
-    {
-        new AccessTokenAuth { SpaceId = "space-001", Subscription = "free", AccessToken = "token-123", ApiEndpoint = "https://api.huggingface.co", CreationDate = DateTime.Now.AddDays(-10), Status = true },
-        new AccessTokenAuth { SpaceId = "space-002", Subscription = "pro", AccessToken = "token-456", ApiEndpoint = "https://api.huggingface.co", CreationDate = DateTime.Now.AddDays(-5), Status = false },
-        new AccessTokenAuth { SpaceId = "space-003", Subscription = "enterprise", AccessToken = "token-789", ApiEndpoint = "https://api.huggingface.co", CreationDate = DateTime.Now.AddDays(-1), Status = false }
-    };
+    private List<SessionTokenAuth> dataBuild = new List<SessionTokenAuth>();
 
+    protected override async Task OnInitializedAsync()
+    {
+        if (templateService.BuilderComponents.SubmitGetAll != null)
+        {
+            var response = await templateService.BuilderComponents.SubmitGetAll(null);
+            if (response.Succeeded)
+            {
+                services = response.Data;
+                StateHasChanged();
+            }
+        }
+      
+    }
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
 
