--- a/LAHJA/wwwroot/css/site.css
+++ b/LAHJA/wwwroot/css/site.css
@@ -1,23 +1,30 @@
 ﻿
-.cont-plan-RenderComponent{
-    position:fixed;
-    width:100%;
-    height:100%;
-    left:0
-
+.cont-plan-RenderComponent {
+    /*position:fixed;*/
+    width: 100%;
+    height: 100%;
+    left: 0 ;
+    /*display:flex;
+    flex-direction:row;
+    justify-content:space-around;
+    align-items:start;*/
 
 }
 .plan-RenderComponent{
-    height:auto;
+    max-height:1000px;
     position:fixed;
+    overflow:auto;
     width:80%;
     left:0;
-    top:50px
-
+    top:50px;
 }
 .plan-RenderComponent-nav {
-    position: fixed;
+    /*height: 800px;*/
+    /*position: fixed;*/
+  /*  top:50px;*/
     width: 20%;
+    /*height: auto;*/
+    /*overflow-y: auto !important;*/
     right: 0
 }
 /* Icons Section */
